# opensaf

./: .gitignore  .hgignore  00-README.conf  00-README.debug  00-README.drbd  00-README.samples  00-README.unittest  AUTHORS  COPYING  ChangeLog  Doxyfile.in  INSTALL  Makefile.am  Makefile.common  NEWS  OpenSAFCopyRights  README  README_LOGENH  bootstrap.sh  configure.ac  cppcheck_append.cc  include.mk  opensaf.spec.in  rpm.mk  test.sh
contrib/plmc/: Makefile.am  Makefile.common  README  configure.ac
contrib/plmc/config/: Makefile.am  plmcboot.service.in  plmcd.conf  plmcd.service.in
contrib/plmc/include/: Makefile.am  plmc.h  plmc_cmds.h
contrib/plmc/lib/: Makefile.am
contrib/plmc/plmc_boot/: Makefile.am  plmc_boot.c
contrib/plmc/plmcd/: Makefile.am  plmc_d.c  plmcd.c
contrib/plmc/scripts/: Makefile.am  README  plmc_boot_script.in  plmc_main.in  plmcboot.in  plmcd.in
java/: INSTALL  Makefile  Makefile.am  TODO
java/ais_api/: Makefile.am  build.xml  overview.html
java/ais_api_impl/: Makefile.am  build.xml
java/ais_api_impl_native/: Makefile.am  j_ais.c  j_ais.h  j_ais_amf.c  j_ais_amf.h  j_ais_amf_compRegistry.c  j_ais_amf_compRegistry.h  j_ais_amf_csiManager.c  j_ais_amf_csiManager.h  j_ais_amf_errReporting.c  j_ais_amf_errReporting.h  j_ais_amf_healthcheck.c  j_ais_amf_healthcheck.h  j_ais_amf_libHandle.c  j_ais_amf_libHandle.h  j_ais_amf_pgManager.c  j_ais_amf_pgManager.h  j_ais_amf_pm.c  j_ais_amf_pm.h  j_ais_clm.c  j_ais_clm.h  j_ais_clm_libHandle.c  j_ais_clm_libHandle.h  j_ais_clm_manager.c  j_ais_clm_manager.h  j_ais_libHandle.c  j_ais_libHandle.h  j_ais_socketUtil.c  j_utils.c  j_utils.h  j_utilsPrint.c  j_utilsPrint.h  javah.xml  jni_ais.h  jni_ais_amf.h  jni_ais_clm.h  tracer.c  tracer.h
java/ais_api_test/: Makefile.am  build.xml
java/ais_api_test/configandscript/: AppConfig.xml.template  CLM_Tests.launch  gendeploypack.sh  java_comp_inst.sh.template  java_comp_term.sh  java_test_comp_inst.sh  runClmTests.sh  runClmTests.sh.template  (+2 more)
java/am4j_sailfin/: OpenSAF-and-Sailfin.txt
java/amf_agent/: Makefile.am  build.xml
lib/lib_SaAmf/: Makefile.am
lib/lib_SaCkpt/: Makefile.am
lib/lib_SaClm/: Makefile.am
lib/lib_SaEvt/: Makefile.am
lib/lib_SaImm/: Makefile.am  libSaImmOi.version
lib/lib_SaLog/: Makefile.am  libSaLog.version
lib/lib_SaMsg/: Makefile.am
lib/lib_SaNtf/: Makefile.am  libSaNtf.version
lib/lib_ncs_core/: Makefile.am
osaf/cli/: Makefile.am  cli.c  cli.h  cli_def.h  cli_mem.h  cli_opt.h  cliapi.c  cliconst.h  clictree.c  clictree.h  cliio.c  cliio.h  clilog.c  clilog.h  clipar.h  clistruc.h  clitrav.c  clitrav.h  sysfcli.c
osaf/snmp/: Makefile.am
python/: Makefile.am  Makefile.mk  README  README_UTILS  pylintrc  setup.py
python/pyosaf/: saAis.py  saAmf.py  saCkpt.py  saClm.py  saEnumConst.py  saEvt.py  saImm.py  saImmOi.py  saImmOm.py  saLck.py  saLog.py  saMsg.py  saNtf.py  saSmf.py
python/samples/: README  amf_demo  caps  caps-inheritance-impl  clm-listener  clm-tool  imm-listener  imm-listener-inheritance-impl  immadm  immbase.py  immlist  interface-handler  interface-handler-inheritance-impl  interface-handler-inheritance-version  ntfread  ntfsend  ntfsubscribe  ping-pong  ping-pong-inheritance-impl  sample-classes.xml  scale_opensaf  time-reporter  time-reporter-inheritance-impl  tones  tones-inheritance-impl  users  users-inheritance-impl
samples/: Makefile.am  bootstrap.sh  configure.ac  samples.mk
samples/amf/: Makefile.am  OpenSafAmfConfig_Upgrade_5.2.xml
samples/avsv/: AppConfig-2N.xml  AppConfig-nwayactive.xml  AppConfig.xml  Makefile  Makefile.am  README  ValidationConfig.xsd  amf_comp_template.c  amf_demo.c  amf_demo_package  amf_demo_script  avsv.mk  avsv_amf.c  avsv_app.c  avsv_ckpt.c  avsv_main.c  comp_inst.sh  comp_term.sh
samples/cli/: Makefile  Makefile.am  cli.mk  cli_demo_app.c
samples/cpsv/: Makefile  Makefile.am  cpsv.mk  cpsv_main_app.c  cpsv_test_app.c
samples/dtsv/: Makefile  Makefile.am  dtsv.mk  dtsv_demo_main.c  dtsv_dummy1_str.c  dtsv_dummy_ss.h  dtsv_dummy_ss1.c
samples/edsv/: Makefile  Makefile.am  edsv.mk  edsv_demo_app.c  edsv_demo_app.h  edsv_demo_main.c
samples/glsv/: Makefile  Makefile.am  glsv.mk  glsv_demo_app.c  glsv_demo_app1.c  glsv_main_app.c  glsv_main_app1.c  glsv_test_app.c
samples/hisv/: Makefile  Makefile.am  hisv.mk  hisv_events_demo_app.c  hisv_events_demo_app.h  hisv_events_demo_main.c
samples/immsv/: OpensafImm_Upgrade_4.5.xml  OpensafImm_Upgrade_5.0.xml  OpensafImm_Upgrade_5.17.10.xml  README
samples/leap/: Makefile  Makefile.am  leap.mk  leaptest.h  test_atomic_counts.c  test_bufmgr.c  test_dl_app.c  test_encdec.c  test_file.c  test_locks.c  test_mailbox.c  test_main.c  test_memdiag.c  test_patricia.c  test_processlib.c  test_timers.c
samples/masv/: Makefile  Makefile.am  maa_api_usage.cpp  masv.mk  ncs_trap_usage.cpp
samples/mbcsv/: Makefile  Makefile.am  mbcsv.mk  mbcsv_demo_app.c  mbcsv_demo_app.h  mbcsv_demo_main.c
samples/mds/: Makefile  Makefile.am  mds.mk  mds_demo.c
samples/mqsv/: Makefile  Makefile.am  mqsv.mk  mqsv_demo_app.c  mqsv_main_app.c
samples/smfsv/: Makefile.am  README  campaignRollingNodes.xml  campaignRollingSU.xml  campaign_howtowrite.xml  campaign_script.sh  imm.xml  offline_install.sh  offline_remove.sh  online_install.sh  online_remove.sh  smf_demo.c  smfsv.mk
samples/srmsv/: Makefile  Makefile.am  srmsv.mk  srmsv_demo.c  srmsv_demo.h  srmsv_main_app.c  srmsv_test_conf
samples/subagt/: Makefile  Makefile.am  generate_snmp_stubs.sh  snmptm_api.c  snmptm_bgn.c  snmptm_cb.c  snmptm_cli_main.c  snmptm_main.c  snmptm_mib.c  snmptm_scalar_mib.c  snmptm_tblcmd.c  snmptm_tbleight.c  snmptm_tblfive.c  snmptm_tblfive_mib.c  snmptm_tblfour.c  snmptm_tblone.c  snmptm_tblone_mib.c  snmptm_tblseven.c  snmptm_tblsix.c  snmptm_tblsix_mib.c  snmptm_tblten.c  snmptm_tblthree.c  snmptm_tblthree_mib.c  subagt.mk
services/avsv/: Makefile.am
services/bam/: Makefile.am  bam_hw_deploy.cpp  bam_hw_util.c  bam_log.c  bam_psr.c
services/cli/: Makefile.am  cliapi.c
services/common/: Makefile.am  ncs_main_pub.c
(+7371 files in other folders)
